# renderer

./: .gitignore  CMakeLists.txt  camera.h  hit.h  image.h  main.cpp  material.h  memo.txt  object.h  random.h  ray.h  scene.h  shape.h  surface.h  vector.h
